--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
@@ -21,6 +21,10 @@
             android:name="com.night.hack.hacknightproject.BackgroundService"
             android:enabled="true"
             android:exported="true" >
+            <intent-filter>
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </service>
 
         <activity
